edit the profiles

--- a/zxc-config-repo/trunk/zxc-api-gateway-dev.yml
+++ b/zxc-config-repo/trunk/zxc-api-gateway-dev.yml
@@ -12,7 +12,7 @@ spring:
       max-file-size: 100Mb
       max-request-size: 100Mb
   application:
-    name: api-gateway
+    name: zxc-api-gateway
 hystrix:
   command:
     default:
