--- a/zxc-config-repo/trunk/zxc-api-gateway-local.yml
+++ b/zxc-config-repo/trunk/zxc-api-gateway-local.yml
@@ -12,7 +12,7 @@ spring:
       max-file-size: 100Mb
       max-request-size: 100Mb
   application:
-    name: api-gateway
+    name: zxc-api-gateway
 hystrix:
   command:
     default:
@@ -34,6 +34,10 @@ zuul:
       sensitiveHeaders: "*"
       serviceId:  ZXC-AUTH
       path: "/userauth/**"
+      stripPrefix:  false
+      sensitiveHeaders: "*"
+      serviceId:  ZXC-BLOG
+      path: "/blog/**"
       stripPrefix:  false
 
 ribbon:
