edit the profiles

--- a/zxc-config-repo/trunk/zxc-api-gateway-dev.yml
+++ b/zxc-config-repo/trunk/zxc-api-gateway-dev.yml
@@ -27,7 +27,7 @@ eureka:
       registerWithEureka: false
   client:
     serviceUrl:
-      defaultZone:  http://192.168.227.10:1111/eureka/
+      defaultZone:  http://192.168.227.10:1111/eureka
 zuul:
   routes:
     auth:
