edit the profiles

--- a/zxc-config-repo/trunk/zxc-api-gateway-local.yml
+++ b/zxc-config-repo/trunk/zxc-api-gateway-local.yml
@@ -35,6 +35,7 @@ zuul:
       serviceId:  ZXC-AUTH
       path: "/userauth/**"
       stripPrefix:  false
+    blog:
       sensitiveHeaders: "*"
       serviceId:  ZXC-BLOG
       path: "/blog/**"
