--- a/zxc-config-repo/trunk/zxc-service-register-local.yml
+++ b/zxc-config-repo/trunk/zxc-service-register-local.yml
@@ -1,5 +1,5 @@
 server:
-  port: 1111
+  port: 1111  # HTTP (Tomcat) port
 
 eureka:
   server:
@@ -8,8 +8,13 @@ eureka:
   instance:
     ipAddress: localhost
     preferIpAddress: true
-  client:
+  client:   # Not a client, don't register with yourself
     register-with-eureka: false
     fetch-registry: false
     serviceUrl:
       defaultZone: http://localhost:1111/eureka/
+
+# Discovery Server Dashboard uses FreeMarker.  Don't want Thymeleaf templates
+#spring:
+#  thymeleaf:
+#    enabled: false     # Disable Thymeleaf
