--- a/zxc-config-repo/trunk/zxc-api-gateway-dev.yml
+++ b/zxc-config-repo/trunk/zxc-api-gateway-dev.yml
@@ -5,14 +5,14 @@ multipart:
   maxFileSize: 100Mb
   maxRequestSize: 100Mb
 
+
 spring:
   http:
     multipart:
       enabled: true
       max-file-size: 100Mb
       max-request-size: 100Mb
-  application:
-    name: zxc-api-gateway
+
 hystrix:
   command:
     default:
@@ -21,13 +21,39 @@ hystrix:
           thread:
             timeoutInMilliseconds: 60000
 
+ribbon:
+  eureka:
+    enabled:  true
+  ConnectTimeout: 3000
+  ReadTimeout: 60000
+
+logging:
+  level:
+    org:
+      springframework: info
+    com:
+      smartconns: debug
+
 eureka:
   instance:
     client:
       registerWithEureka: false
+    prefer-ip-address: true
   client:
     serviceUrl:
       defaultZone:  http://192.168.27.10:1111/eureka
+
+security:
+  oauth2:
+    resource:
+      userInfoUri: http://192.168.27.10:8899/userauth/me
+      preferTokenInfo: false
+    client:
+      accessTokenUri: http://192.168.27.10:8899/userauth/oauth/token
+      userAuthorizationUri: http://192.168.27.10:8899/userauth/oauth/authorize
+      clientId: client
+      clientSecret: secret
+      
 zuul:
   routes:
     auth:
