--- a/zxc-config-repo/trunk/zxc-blog-local.yml
+++ b/zxc-config-repo/trunk/zxc-blog-local.yml
@@ -28,6 +28,17 @@ spring:
       hibernate:
         current_session_context_class: org.springframework.orm.hibernate4.SpringSessionContext
 
+security:
+  oauth2:
+    resource:
+      userInfoUri: http://localhost:8899/userauth/me
+      preferTokenInfo: false
+    client:
+      accessTokenUri: http://localhost:8899/userauth/oauth/token
+      userAuthorizationUri: http://localhost:8899/userauth/oauth/authorize
+      clientId: client
+      clientSecret: secret
+
 liquibase:
    enabled: true
    check-change-log-location: true
