--- a/zxc-config-repo/trunk/zxc-blog-dev.yml
+++ b/zxc-config-repo/trunk/zxc-blog-dev.yml
@@ -43,3 +43,8 @@ liquibase:
    enabled: true
    check-change-log-location: true
    change-log: classpath:/liquibase/db.changelog.xml
+
+authserver:
+  hostname: 192.168.27.10
+  port: 8899
+  contextPath: userauth
