--- a/zxc-blog/src/main/resources/application.yml
+++ b/zxc-blog/src/main/resources/application.yml
@@ -1,41 +1,41 @@
-#spring:
-#  application:
-#    name: zxc-auth
-#  cloud:
-#    config:
-#      uri: http://localhost:6666
-
-server:
-  port: 8086
-  context-path: /blog
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:1111/eureka/
-
 spring:
   application:
       name: zxc-blog
-  datasource:
-      url: jdbc:mysql://localhost:3306/zxc_blog?characterEncoding=UTF-8&useSSL=false
-      username: root
-      password: zxc@0405
-      driver-class-name: com.mysql.jdbc.Driver
-      initialize: false
-      test-on-borrow: false
-      test-on-return: false
-      test-while-idle: true
-      max-wait-millis: 30000
-      validation-query: SELECT 1
-      time-between-eviction-runs-millis: 20000
-      min-evictable-idle-time-millis: 28700
-  jpa:
-    database-platform: org.hibernate.dialect.MySQLDialect
-    properties:
-      hibernate:
-        current_session_context_class: org.springframework.orm.hibernate4.SpringSessionContext
+  cloud:
+    config:
+      uri: http://localhost:8888
 
-liquibase:
-   enabled: true
-   check-change-log-location: true
-   change-log: classpath:/liquibase/db.changelog.xml
+#server:
+#  port: 8081
+#  context-path: /blog
+#eureka:
+#  client:
+#    serviceUrl:
+#      defaultZone: http://localhost:1111/eureka/
+#
+#spring:
+#  application:
+#      name: zxc-blog
+#  datasource:
+#      driver-class-name: com.mysql.jdbc.Driver
+#      url: jdbc:mysql://localhost:3306/zxc_blog?characterEncoding=UTF-8&useSSL=false
+#      username: root
+#      password:
+#      initialize: false
+#      test-on-borrow: false
+#      test-on-return: false
+#      test-while-idle: true
+#      max-wait-millis: 30000
+#      validation-query: SELECT 1
+#      time-between-eviction-runs-millis: 20000
+#      min-evictable-idle-time-millis: 28700
+#  jpa:
+#    database-platform: org.hibernate.dialect.MySQLDialect
+#    properties:
+#      hibernate:
+#        current_session_context_class: org.springframework.orm.hibernate4.SpringSessionContext
+#
+#liquibase:
+#   enabled: true
+#   check-change-log-location: true
+#   change-log: classpath:/liquibase/db.changelog.xml
