--- a/zxc-config-repo/trunk/zxc-blog-local.yml
+++ b/zxc-config-repo/trunk/zxc-blog-local.yml
@@ -44,7 +44,7 @@ liquibase:
    check-change-log-location: true
    change-log: classpath:/liquibase/db.changelog.xml
 
-authserver:
-  hostname: localhost
-  port: 8899
-  contextPath: userauth
+#authserver:
+#  hostname: localhost
+#  port: 8899
+#  contextPath: userauth
