--- a/zxc-auth/pom.xml
+++ b/zxc-auth/pom.xml
@@ -113,6 +113,21 @@
                     <include>*.yml</include>
                 </includes>
             </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>version.properties</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+                <excludes>
+                    <exclude>*.yml</exclude>
+                </excludes>
+            </resource>
+
         </resources>
 
         <plugins>
