--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,32 @@
-.idea
+target/
+output/
+logs/
+*.db
+.eclipse
+/lib/
+/logs/
+/modules
+/project/project
+/project/target
+/target
+
+# Java template
+.class
+.exe
+.log
+.classpath
+/**/.factorypath
+/**/.springBeans
+.settings
+.metadata
+Thumb.db
+.project
 *.iml
+.idea
+*.classpath
+*.project
+.externalToolBuilders/
+*.log
+.DS_Store
+*/target/
+*.flattened-pom.xml
