--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>app</module>
         <module>repository</module>
         <module>offline</module>
+        <module>zxc-common-dao</module>
     </modules>
 
     <dependencyManagement>
