--- a/restful/zxc-restful-blog/pom.xml
+++ b/restful/zxc-restful-blog/pom.xml
@@ -27,6 +27,12 @@
             <groupId>com.bread.enlighten</groupId>
             <artifactId>common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.bread.enlighten</groupId>
+            <artifactId>zcx-common-util</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
