--- a/auth/pom.xml
+++ b/auth/pom.xml
@@ -11,8 +11,8 @@
     <description>Demo Auth project for Spring Boot</description>
 
     <parent>
-        <groupId>com.mob.invest</groupId>
-        <artifactId>invest</artifactId>
+        <groupId>com.bread.enlighten</groupId>
+        <artifactId>zxc</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
@@ -90,7 +90,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring-boot.version}</version>
+                <version>${spring.boot.version}</version>
                 <configuration>
                     <fork>true</fork>
                     <mainClass>com.mob.invest.server.AuthApplication</mainClass>
