--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -89,7 +89,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring-boot.version}</version>
+                <version>${spring.boot.version}</version>
                 <configuration>
                     <fork>true</fork>
                     <mainClass>com.mob.invest.server.GatewayApplication</mainClass>
