--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring-boot.version}</version>
+                <version>${spring.boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
                 <!-- 防止多个log实现，出现冲突。 -->
@@ -53,9 +53,32 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <spring-boot.version>2.1.4.RELEASE</spring-boot.version>
+        <spring.boot.version>2.2.6.RELEASE</spring.boot.version>
+        <graphql.version>5.0.2</graphql.version>
         <spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
         <java.version>1.8</java.version>
+
+        <elastic.version>5.6.4</elastic.version>
+
+        <mysql-connector.version>5.1.48</mysql-connector.version>
+        <mongo-java-driver.version>3.4.2</mongo-java-driver.version>
+        <spock.version>1.3-groovy-2.5</spock.version>
+        <groovy.version>2.5.8</groovy.version>
+        <flyway.version>5.1.4</flyway.version>
+        <jackson.version>2.10.2</jackson.version>
+
+        <curator.version>4.1.0</curator.version>
+        <mockito.version>2.24.5</mockito.version>
+        <powermock.version>2.0.0</powermock.version>
+        <junit5.version>5.5.2</junit5.version>
+        <jmh.version>1.21</jmh.version>
+        <mybatis-plus.version>3.2.0</mybatis-plus.version>
+
+        <slf4j.version>1.7.25</slf4j.version>
+        <mob-swagger.version>3.6.4</mob-swagger.version>
+        <super-mailer.version>1.2.1</super-mailer.version>
+
+        <guava.version>28.0-jre</guava.version>
     </properties>
 
     <dependencies>
@@ -63,7 +86,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
-            <version>${spring-boot.version}</version>
+            <version>${spring.boot.version}</version>
         </dependency>
 
         <dependency>
@@ -80,7 +103,7 @@
         <dependency> <!-- 引入log4j2依赖 -->
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-log4j2</artifactId>
-            <version>${spring-boot.version}</version>
+            <version>${spring.boot.version}</version>
         </dependency>
 
         <!--日志跟踪-->
