--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,20 @@
     <url>http://maven.apache.org</url>
 
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.8</java.version>
+        <snippetsDirectory>${project.build.directory}/generated-snippets</snippetsDirectory>
+        <docker.image.prefix>localhost:5000</docker.image.prefix>
+        <spring.cloud.version>1.1.5.RELEASE</spring.cloud.version>
+        <spring.security.version>2.0.1.RELEASE</spring.security.version>
+        <spring.boot.version>2.3.1.RELEASE</spring.boot.version>
+        <spring.cloud.security.version>1.1.3.RELEASE</spring.cloud.security.version>
+        <spring.cloud.feign.version>1.2.2.RELEASE</spring.cloud.feign.version>
+        <spring.cloud.eureka.version>1.2.2.RELEASE</spring.cloud.eureka.version>
+        <spring.restdoc.verion>1.1.2.RELEASE</spring.restdoc.verion>
+    </properties>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -34,7 +48,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Camden.RELEASE</version>
+                <version>Greenwich.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -52,17 +66,6 @@
                 <version>3.5.1</version>
             </dependency>
 
-            <dependency>
-                <groupId>org.springframework.restdocs</groupId>
-                <artifactId>spring-restdocs-mockmvc</artifactId>
-                <version>${spring.restdoc.verion}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.springframework.restdocs</groupId>
-                <artifactId>spring-restdocs-core</artifactId>
-                <version>${spring.restdoc.verion}</version>
-            </dependency>
 
             <dependency>
                 <groupId>org.springframework.security.oauth</groupId>
@@ -73,14 +76,15 @@
             <dependency>
                 <groupId>org.springframework.retry</groupId>
                 <artifactId>spring-retry</artifactId>
-                <version>1.1.4.RELEASE</version>
+                <version>1.3.0</version>
             </dependency>
 
             <dependency>
-                <groupId>org.springframework.integration</groupId>
-                <artifactId>spring-integration-kafka</artifactId>
-                <version>2.0.1.RELEASE</version>
+                <groupId>org.springframework.kafka</groupId>
+                <artifactId>spring-kafka</artifactId>
+                <version>2.5.2.RELEASE</version>
             </dependency>
+
 
         </dependencies>
     </dependencyManagement>
@@ -91,19 +95,9 @@
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
-                    <version>1.3.2.RELEASE</version>
+                    <version>${spring.boot.version}</version>
                 </plugin>
 
-                <plugin>
-                    <groupId>org.liquibase</groupId>
-                    <artifactId>liquibase-maven-plugin</artifactId>
-                    <version>3.5.1</version>
-                    <configuration>
-                        <propertyFileWillOverride>true</propertyFileWillOverride>
-                        <propertyFile>target/classes/liquibase/liquibase.properties</propertyFile>
-                        <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
-                    </configuration>
-                </plugin>
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -114,6 +108,7 @@
                         </includes>
                     </configuration>
                 </plugin>
+
                 <plugin>
                     <groupId>org.asciidoctor</groupId>
                     <artifactId>asciidoctor-maven-plugin</artifactId>
@@ -208,18 +203,5 @@
 
     </build>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
-        <snippetsDirectory>${project.build.directory}/generated-snippets</snippetsDirectory>
-        <docker.image.prefix>localhost:5000</docker.image.prefix>
-        <spring.cloud.version>1.1.5.RELEASE</spring.cloud.version>
-        <spring.security.version>2.0.1.RELEASE</spring.security.version>
-        <spring.boot.version>1.4.1.RELEASE</spring.boot.version>
-        <spring.cloud.security.version>1.1.3.RELEASE</spring.cloud.security.version>
-        <spring.cloud.feign.version>1.2.2.RELEASE</spring.cloud.feign.version>
-        <spring.cloud.eureka.version>1.2.2.RELEASE</spring.cloud.eureka.version>
-        <spring.restdoc.verion>1.1.2.RELEASE</spring.restdoc.verion>
-    </properties>
 
 </project>
