--- a/zxc-config-repo/trunk/zxc-api-gateway-local.yml
+++ b/zxc-config-repo/trunk/zxc-api-gateway-local.yml
@@ -1,6 +1,6 @@
 
 server:
-  port: 9999
+  port: 8888
 
 multipart:
   maxFileSize: 100Mb
@@ -13,16 +13,16 @@ spring:
       max-file-size: 100Mb
       max-request-size: 100Mb
 
-  security:
-  oauth2:
-    resource:
-      userInfoUri: http://localhost:8899/userauth/me
-      preferTokenInfo: false
-    client:
-      accessTokenUri: http://localhost:8899/userauth/oauth/token
-      userAuthorizationUri: http://localhost:8899/userauth/oauth/authorize
-      clientId: client
-      clientSecret: secret
+#  security:
+#  oauth2:
+#    resource:
+#      userInfoUri: http://localhost:8899/userauth/me
+#      preferTokenInfo: false
+#    client:
+#      accessTokenUri: http://localhost:8899/userauth/oauth/token
+#      userAuthorizationUri: http://localhost:8899/userauth/oauth/authorize
+#      clientId: client
+#      clientSecret: secret
 
 hystrix:
   command:
@@ -45,24 +45,3 @@ logging:
     com:
       smartconns: debug
 
-eureka:
-  instance:
-    client:
-      registerWithEureka: false
-    prefer-ip-address: true
-  client:
-    serviceUrl:
-      defaultZone:  http://localhost:1111/eureka
-
-zuul:
-  routes:
-    auth:
-      sensitiveHeaders: "*"
-      serviceId:  ZXC-AUTH
-      path: "/userauth/**"
-      stripPrefix:  false
-    blog:
-      sensitiveHeaders: "*"
-      serviceId:  ZXC-BLOG
-      path: "/blog/**"
-      stripPrefix:  false
