--- a/zxc-api-gateway/pom.xml
+++ b/zxc-api-gateway/pom.xml
@@ -34,6 +34,11 @@
             <artifactId>spring-cloud-config-client</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
