--- a/zxc-blog/src/main/resources/application.yml
+++ b/zxc-blog/src/main/resources/application.yml
@@ -3,6 +3,9 @@ server:
   servlet:
     context-path: /blog
 spring:
+  cloud:
+    config:
+      uri: http://localhost:8082
   application:
       name: zxc-blog
   profiles:
