--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,11 @@
                 <version>2.2.3.RELEASE</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-undertow</artifactId>
+                <version>${spring.boot.version}</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
