--- a/pom.xml
+++ b/pom.xml
@@ -29,13 +29,8 @@
         <java.version>1.8</java.version>
         <snippetsDirectory>${project.build.directory}/generated-snippets</snippetsDirectory>
         <docker.image.prefix>localhost:5000</docker.image.prefix>
-        <spring.cloud.version>1.1.5.RELEASE</spring.cloud.version>
-        <spring.security.version>2.0.1.RELEASE</spring.security.version>
         <spring.boot.version>2.3.1.RELEASE</spring.boot.version>
-        <spring.cloud.security.version>1.1.3.RELEASE</spring.cloud.security.version>
-        <spring.cloud.feign.version>1.2.2.RELEASE</spring.cloud.feign.version>
-        <spring.cloud.eureka.version>1.2.2.RELEASE</spring.cloud.eureka.version>
-        <spring.restdoc.verion>1.1.2.RELEASE</spring.restdoc.verion>
+        <spring.cloud.version>2.2.3.RELEASE</spring.cloud.version>
     </properties>
 
     <dependencyManagement>
@@ -61,7 +56,8 @@
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
-                <version>8.0.20</version>
+                <version>5.1.48</version>
+<!--                <version>8.0.20</version>-->
             </dependency>
 
             <!-- https://mvnrepository.com/artifact/org.liquibase/liquibase-core -->
@@ -71,24 +67,17 @@
                 <version>3.10.0</version>
             </dependency>
 
-            <!-- https://mvnrepository.com/artifact/org.springframework.security.oauth/spring-security-oauth2 -->
-            <dependency>
-                <groupId>org.springframework.security.oauth</groupId>
-                <artifactId>spring-security-oauth2</artifactId>
-                <version>2.5.0.RELEASE</version>
-            </dependency>
-
-            <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis -->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-data-redis</artifactId>
-                <version>${spring.boot.version}</version>
-            </dependency>
 
             <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
+                <version>${spring.boot.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-undertow</artifactId>
                 <version>${spring.boot.version}</version>
             </dependency>
 
@@ -99,6 +88,18 @@
                 <version>${spring.boot.version}</version>
             </dependency>
 
+            <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-redis</artifactId>
+                <version>${spring.boot.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-mongodb</artifactId>
+                <version>${spring.boot.version}</version>
+            </dependency>
 
             <!-- https://mvnrepository.com/artifact/com.alibaba.cloud/spring-cloud-starter-alibaba-nacos-discovery -->
             <dependency>
@@ -110,68 +111,58 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-gateway</artifactId>
-                <version>2.2.3.RELEASE</version>
+                <version>${spring.cloud.version}</version>
             </dependency>
 
             <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-openfeign</artifactId>
-                <version>2.2.3.RELEASE</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-undertow</artifactId>
-                <version>${spring.boot.version}</version>
+                <version>${spring.cloud.version}</version>
             </dependency>
 
         </dependencies>
     </dependencyManagement>
 
+    <profiles>
+        <!-- DEV -->
+        <profile>
+            <id>dev</id>
+            <properties>
+                <env>dev</env>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <!-- TEST -->
+        <profile>
+            <id>test</id>
+            <properties>
+                <env>test</env>
+            </properties>
+        </profile>
+        <!-- PROD -->
+        <profile>
+            <id>prod</id>
+            <properties>
+                <env>prod</env>
+            </properties>
+        </profile>
+    </profiles>
+
     <build>
         <pluginManagement>
             <plugins>
-                <plugin>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-maven-plugin</artifactId>
-                </plugin>
-
+                <!--                <plugin>-->
+                <!--                    <groupId>org.springframework.boot</groupId>-->
+                <!--                    <artifactId>spring-boot-maven-plugin</artifactId>-->
+                <!--                    <version>${spring-boot.version}</version>-->
+                <!--                </plugin>-->
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <configuration>
-                        <includes>
-                            <include>**/*Documentation.java</include>
-                        </includes>
-                    </configuration>
-                </plugin>
-
-                <plugin>
-                    <artifactId>maven-resources-plugin</artifactId>
-                    <version>2.7</version>
-                    <executions>
-                        <execution>
-                            <id>copy-resources</id>
-                            <phase>prepare-package</phase>
-                            <goals>
-                                <goal>copy-resources</goal>
-                            </goals>
-                            <configuration>
-                                <outputDirectory>
-                                    ${project.build.outputDirectory}/static/docs
-                                </outputDirectory>
-                                <resources>
-                                    <resource>
-                                        <directory>
-                                            ${project.build.directory}/generated-docs
-                                        </directory>
-                                    </resource>
-                                </resources>
-                            </configuration>
-                        </execution>
-                    </executions>
                 </plugin>
 
                 <plugin>
@@ -204,8 +195,6 @@
                         </dependency>
                     </dependencies>
                 </plugin>
-
-
             </plugins>
 
         </pluginManagement>
