--- a/pom.xml
+++ b/pom.xml
@@ -56,8 +56,8 @@
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
-                <version>5.1.48</version>
-<!--                <version>8.0.20</version>-->
+<!--                <version>5.1.48</version>-->
+                <version>8.0.20</version>
             </dependency>
 
             <!-- https://mvnrepository.com/artifact/org.liquibase/liquibase-core -->
@@ -152,6 +152,22 @@
     </profiles>
 
     <build>
+        <finalName>${project.artifactId}</finalName>
+        <filters>
+            <filter>../conf/${env}.properties</filter>
+        </filters>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+                <filtering>true</filtering>
+            </testResource>
+        </testResources>
         <pluginManagement>
             <plugins>
                 <!--                <plugin>-->
@@ -160,10 +176,17 @@
                 <!--                    <version>${spring-boot.version}</version>-->
                 <!--                </plugin>-->
 
+                <!-- 打包资源 -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>3.1.0</version>
                 </plugin>
+
+<!--                <plugin>-->
+<!--                    <groupId>org.apache.maven.plugins</groupId>-->
+<!--                    <artifactId>maven-surefire-plugin</artifactId>-->
+<!--                </plugin>-->
 
                 <plugin>
                     <groupId>com.spotify</groupId>
@@ -191,7 +214,7 @@
                         <dependency>
                             <groupId>org.apache.commons</groupId>
                             <artifactId>commons-compress</artifactId>
-                            <version>1.12</version>
+                            <version>1.18</version>
                         </dependency>
                     </dependencies>
                 </plugin>
