--- a/conf/prod.properties
+++ b/conf/prod.properties
@@ -1,6 +1,8 @@
-mysql.host=192.168.230.10:3306
-mysql.username=root
-mysql.password=root
+jdbc.host=192.168.230.10:3306
+jdbc.username=root
+jdbc.password=root
+jdbc.driver=com.mysql.cj.jdbc.Driver
+blog.jdbc.url=jdbc:mysql://192.168.230.10:3306/zxc_blog?characterEncoding=UTF-8&useSSL=false&&serverTimezone=GMT
 
 redis.host=192.168.230.10:6379
 
