--- a/zxc-auth/src/main/resources/application.yml
+++ b/zxc-auth/src/main/resources/application.yml
@@ -10,10 +10,10 @@ spring:
     config:
       uri: http://localhost:8082
   datasource:
-      driver-class-name: com.mysql.jdbc.Driver
+      driver-class-name: ${jdbc.driver}
       url: jdbc:mysql://localhost:3306/zxc_auth?characterEncoding=UTF-8&useSSL=false
-      username: root
-      password: root
+      username: ${jdbc.username}
+      password: ${jdbc.password}
       initialize: false
       test-on-borrow: false
       test-on-return: false
