--- a/zxc-blog/pom.xml
+++ b/zxc-blog/pom.xml
@@ -78,18 +78,17 @@
     </dependencies>
 
     <build>
-<!--        <finalName>${project.artifactId}</finalName>-->
-<!--        <filters>-->
-<!--            <filter>../conf/${env}.properties</filter>-->
-<!--        </filters>-->
-<!--        <resources>-->
-<!--            <resource>-->
-<!--                <directory>src/main/resources/</directory>-->
-<!--                <filtering>true</filtering>-->
-<!--            </resource>-->
-<!--        </resources>-->
+        <filters>
+            <filter>../conf/${env}.properties</filter>
+        </filters>
 
         <plugins>
+            <plugin>
+                <artifactId>maven-jar-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
             </plugin>
